syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";
import "google/protobuf/timestamp.proto";

package workspace_secret;

service SecretService {
  rpc CreateSecret(CreateSecretRequest) returns (CreateSecretResponse) {}
  rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse) {}
  rpc UpdateSecret(UpdateSecretRequest) returns (UpdateSecretResponse) {}
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}
  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse) {}
}

message WorkspaceSecret {
  string id = 1;
  string name = 2;
  string value = 3;
  bool sensitive = 4;
  string last_updated_by = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;

}

message CreateSecretRequest {
  string name = 2;
  string value = 3;
  bool sensitive = 4;
}

message CreateSecretResponse {
  bool ok = 1;
  string err_msg = 2;
  string id = 3;
}


message DeleteSecretRequest {
  string id = 1;
}

message DeleteSecretResponse {
  bool ok = 1;
  string err_msg = 2;
}

message UpdateSecretRequest {
  string name = 2;
  string value = 3;
  bool sensitive = 4;
}

message UpdateSecretResponse {
  bool ok = 1;
  string err_msg = 2;
}

message GetSecretRequest {
  string name = 1;
}

message GetSecretResponse {
  bool ok = 1;
  string err_msg = 2;
  WorkspaceSecret secret = 3;
}

message ListSecretsRequest {}

message ListSecretsResponse {
  bool ok = 1;
  string err_msg = 2;
  repeated WorkspaceSecret secrets = 3;
}

